--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,19 +28,29 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-    app:layout_constraintBottom_toTopOf="@id/nav_view"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:navGraph="@navigation/mobile_navigation"
-    android:elevation="8dp"/>
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation"
+        android:elevation="8dp"/>
+
+    <Button
+        android:id="@+id/button_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Login"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPokemons"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-    app:layout_constraintTop_toBottomOf="@id/nav_host_fragment_activity_main"
-    app:layout_constraintBottom_toTopOf="@id/nav_view" />
+        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment_activity_main"
+        app:layout_constraintBottom_toTopOf="@id/nav_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
