--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -90,5 +90,15 @@
         android:padding="10dp"
         android:textAlignment="center"
         android:textColor="@android:color/black"
+        android:layout_marginBottom="25dp"
         android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/button_logout"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Log Out"
+        android:layout_gravity="center"
+        android:background="@drawable/rounded_background"
+        android:gravity="center" />
 </LinearLayout>
